--- a/src/Components/Admin/Folios/Folios.css
+++ b/src/Components/Admin/Folios/Folios.css
@@ -10,6 +10,7 @@
   /* padding: 3.5rem 3.5rem 3rem 6.5rem; */
   width: 100%;
   gap: 1.6rem;
+  overflow: auto;
 }
 
 .folio-title {
