--- a/src/Components/Admin/Investors/Investors.css
+++ b/src/Components/Admin/Investors/Investors.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
+  overflow: auto;
 }
 
 #inv-title {
